# html-to-url

./: .pypirc  pyproject.toml  setup.cfg  setup.py
html_to_url/: generateurl.py
html_to_url/html_to_url.egg-info/: PKG-INFO  SOURCES.txt
